# rtsp-vision-api

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
.cursor/skills/add-crud-api/: SKILL.md
auth_api/: tests.py  urls.py  views.py
cameras/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
cameras/migrations/: 0001_initial.py  0002_remove_camerasource_description_and_more.py  0003_camerasource_is_online_camerasource_last_checked_at.py  0004_alter_camerasource_name.py  0005_camerastatuslog.py  0006_alter_camerasource_cctv_pass_and_more.py
config/: celery.py  settings.py  urls.py
health/: tests.py  views.py
utils/: authentication.py  exceptions.py  logManager.py  middleware.py  pagination.py  responses.py  schema.py  sqlBuild.py  throttles.py
